# libsophav

./: .gitattributes  CMakeLists.txt  README.md
bmcv/: CMakeLists.txt  Makefile
bmcv/document/bmcv_common/: cover.tex  disclaimer_en.rst  disclaimer_zh.rst
bmcv/document/bmcv_demo/: Makefile
bmcv/include/: bmcv_api.h  bmcv_api_ext.h  bmcv_api_ext_c.h  bmcv_internal.h
bmcv/src/: bmcv_api_absdiff.c  bmcv_api_add_weight.c  bmcv_api_as_strided.c  bmcv_api_attribute_filter_topk.c  bmcv_api_axpy.c  bmcv_api_base64.c  bmcv_api_batch_topk.c  bmcv_api_bayer2rgb.c  bmcv_api_bitwise.c  bmcv_api_calc_hist.c  bmcv_api_cmulp.c  bmcv_api_convert_to.c  bmcv_api_copy_to.c  bmcv_api_distance.c  bmcv_api_draw_lines.c  bmcv_api_feature_match.c  bmcv_api_fft.c  bmcv_api_gaussian_blur.c  bmcv_api_gemm.c  bmcv_api_hist_balance.c  bmcv_api_hm_distance.c  bmcv_api_istft.c  bmcv_api_jpeg_dec.c  bmcv_api_jpeg_enc.c  bmcv_api_laplace.c  bmcv_api_matmul.c  bmcv_api_min_max.c  bmcv_api_nms.c  bmcv_api_put_text.c  bmcv_api_pyramid.c  bmcv_api_quantify.c  bmcv_api_rotate.c  bmcv_api_rotate_trans.c  bmcv_api_sobel.c  bmcv_api_sort.c  bmcv_api_stft.c  bmcv_api_threshold.c  bmcv_api_transpose.c  bmcv_api_warp_affine.c  bmcv_api_warp_perspective.c  (+14 more)
bmcv/src/bm1688/: bmcv_a2_base64.h  bmcv_a2_blend_ext.h  bmcv_a2_common_internal.h  bmcv_a2_dpu_ext.h  bmcv_a2_dpu_internal.c  bmcv_a2_dpu_internal.h  bmcv_a2_dwa_ext.h  bmcv_a2_dwa_internal.c  bmcv_a2_dwa_internal.h  bmcv_a2_ive_ext.h  bmcv_a2_ive_internal.c  bmcv_a2_ive_internal.h  bmcv_a2_ldc_ext.h  bmcv_a2_ldc_internal.c  bmcv_a2_ldc_internal.h  bmcv_a2_vpss_ext.h  bmcv_a2_vpss_internal.c  bmcv_a2_vpss_internal.h  bmcv_blend.c  bmcv_blend_ioctl.c  bmcv_blend_ioctl.h
bmcv/src/cmodel/: CMakeLists.txt  bmcv_a2_dpu_cmodel.c  bmcv_a2_dpu_cmodel.h  bmcv_a2_tpu_cmodel.c  bmcv_a2_tpu_cmodel.h  bmcv_a2_vpss_cmodel.c  bmcv_cmodel.h  planar2packed.c  resize_biculic.c  resize_linear.c  resize_nearest.c  yuv420to444-fancy.c  yuv422to444-fancy.c  yuv444to420.c  yuv444to422.c
bmcv/test/: test_2way_blending.c  test_2way_blending_thread.c  test_4way_blending.c  test_4way_blending_thread.c  test_attribute_filter_topk.c  test_bmcv_all.sh  test_bmcv_rotate.c  test_cv_absdiff.c  test_cv_add_weight.c  test_cv_as_strided.c  test_cv_axpy.c  test_cv_base64.c  test_cv_batch_topk.c  test_cv_bayer2rgb.c  test_cv_bitwise.c  test_cv_calc_hist.c  test_cv_cmulp.c  test_cv_convert_to.c  test_cv_copy_to.c  test_cv_distance.c  test_cv_draw_lines.c  test_cv_feature_match.c  test_cv_fft.c  test_cv_gaussian_blur.c  test_cv_gemm.c  test_cv_hist_balance.c  test_cv_hm_distance.c  test_cv_istft.c  test_cv_jpeg.c  test_cv_laplace.c  test_cv_matmul.c  test_cv_min_max.c  test_cv_nms.c  test_cv_put_text.c  test_cv_pyramid.c  test_cv_quantify.c  test_cv_rotate.c  test_cv_sort.c  test_cv_stft.c  test_cv_threshold.c  (+85 more)
bmcv/test/daily_test/: bmcv_as_strided.c  bmcv_base64.c  bmcv_batch_topk.c  bmcv_blend.c  bmcv_calc_hist.c  bmcv_cmulp.c  bmcv_distance.c  bmcv_dwa_affine.c  bmcv_dwa_dewarp.c  bmcv_dwa_fisheye.c  bmcv_dwa_fisheye_grid_info.c  bmcv_dwa_gdc.c  bmcv_dwa_rot.c  bmcv_faiss_indexflatIP.c  bmcv_faiss_indexflatL2.c  bmcv_feature_match.c  bmcv_feature_match_normalized.c  bmcv_fft.c  bmcv_gemm.c  bmcv_gemm_ext.c  bmcv_hist_balance.c  bmcv_hm_distance.c  bmcv_image_absdiff.c  bmcv_image_add_weighted.c  bmcv_image_axpy.c  bmcv_image_bayer2rgb.c  bmcv_image_bitwise_and.c  bmcv_image_bitwise_or.c  bmcv_image_bitwise_xor.c  bmcv_image_convert_to.c  bmcv_image_copy_to.c  bmcv_image_draw_lines.c  bmcv_image_draw_rectangles.c  bmcv_image_fill_rectangle.c  bmcv_image_flip.c  bmcv_image_gaussian_blur.c  bmcv_image_ive_16bitto8bit.c  bmcv_image_ive_add.c  bmcv_image_ive_and.c  bmcv_image_ive_bernsen.c  (+58 more)
bmcv/test/res/: 300x300_argb8888_dog.rgb
bmcv/test/tpu_special_size_test_case/: manual_test_cv_convert_to.c  manual_test_cv_copy_to.c  manual_test_cv_feature_match_float.c  manual_test_cv_feature_match_int8.c  special_size_test_cv_absdiff.c  special_size_test_cv_add_weight.c  special_size_test_cv_axpy.c  special_size_test_cv_batch_topk.c  special_size_test_cv_bayer2rgb.c  special_size_test_cv_bitwise.c  special_size_test_cv_calc_hist.c  special_size_test_cv_cmulp.c  special_size_test_cv_convert_to.c  special_size_test_cv_copy_to.c  special_size_test_cv_distance.c  special_size_test_cv_draw_lines.c  special_size_test_cv_feature_match_float.c  special_size_test_cv_feature_match_int8.c  special_size_test_cv_gaussian_blur.c  special_size_test_cv_gemm.c  special_size_test_cv_hist_balance.c  special_size_test_cv_hm_distance.c  special_size_test_cv_laplace.c  special_size_test_cv_matmul.c  special_size_test_cv_min_max.c  special_size_test_cv_put_text.c  special_size_test_cv_pyramid.c  special_size_test_cv_quantify.c  special_size_test_cv_sort.c  special_size_test_cv_threshold.c  special_size_test_cv_transpose.c
jpeg/: CMakeLists.txt  Makefile
jpeg/example/: bmjpurun.c  bmjpurun.h  jpeg_dec_common.c  jpeg_dec_common.h  jpeg_dec_test.c  jpeg_enc_common.c  jpeg_enc_common.h  jpeg_enc_test.c  jpeg_multi_test.c
jpeg/example/helper/: md5.c  md5.h
jpeg/inc/: bm_jpeg_internal.h
jpeg/src/: bm_ioctl.c  bm_jpeg_interface.c  bm_jpeg_logging.c
tde/: CMakeLists.txt
tde/inc/: comm_tde.h  tde.h  tde_type.h
tde/sample/: sample_tde.c
tde/src/: tde.c
vglite/: CMakeLists.txt  Makefile
vglite/inc/: vg_lite.h  vg_lite_ioctl.h  vg_lite_kernel.h
vglite/resources/: landscape.pkm  nv12_tiled_128x128.raw  nv16.raw  rotate.raw  vector_upload.raw
vglite/sample/: CMakeLists.txt  Makefile  Makefile.def
vglite/src/: vg_lite.c  vg_lite_image.c  vg_lite_ioctl.c  vg_lite_matrix.c  vg_lite_os.c  vg_lite_path.c
vglite/util/: CMakeLists.txt  Makefile  save_png.c  vg_lite_util.c  vg_lite_util.h
video/dec/: CMakeLists.txt
vo/drm/: CMakeLists.txt  Makefile  sample_drm_atomic_crtc.c  sample_drm_atomic_plane.c  sample_drm_double_buffer.c  sample_drm_dsi_and_hdmi.c  sample_drm_gamma_test.c  sample_drm_hdmi.c  sample_drm_ow_property_test.c  sample_drm_page_flip.c  sample_drm_plane_test.c  sample_drm_single_buffer.c
(+875 files in other folders)
