cmake_minimum_required(VERSION 3.16)
project(sample)


add_definitions(-DGPU_CHIP_ID_GCNanoUltraV=1)

add_subdirectory(samples/16pixels_align)
add_subdirectory(samples/24bit_planar)
add_subdirectory(samples/arc_path)
add_subdirectory(samples/ARGB2222)
add_subdirectory(samples/blend_lvgl)
add_subdirectory(samples/character)
add_subdirectory(samples/clear)
add_subdirectory(samples/clear_params)
add_subdirectory(samples/clock)
add_subdirectory(samples/colorkey)
add_subdirectory(samples/color_transformation)
add_subdirectory(samples/decnano_compress)
add_subdirectory(samples/dither)
# add_subdirectory(samples/double_image)
add_subdirectory(samples/format24bit)
add_subdirectory(samples/gamma)
add_subdirectory(samples/gaussian_blur3x3)
# add_subdirectory(samples/gfx)
add_subdirectory(samples/global_alpha)
add_subdirectory(samples/glyphs2)
add_subdirectory(samples/imgA4)
add_subdirectory(samples/imgA8)
add_subdirectory(samples/imgIndex)
add_subdirectory(samples/imgIndex_endian)
add_subdirectory(samples/linearGrad)
add_subdirectory(samples/linearGradient)
# add_subdirectory(samples/lossy)
add_subdirectory(samples/mask)
add_subdirectory(samples/mirror)
add_subdirectory(samples/multi_draw)
add_subdirectory(samples/new_blend_mode)
add_subdirectory(samples/parking)
add_subdirectory(samples/patternFill)
add_subdirectory(samples/pixel_matrix)
add_subdirectory(samples/premultiply)
add_subdirectory(samples/radialGrad)
add_subdirectory(samples/recolor)
add_subdirectory(samples/rgba8_etc2)
add_subdirectory(samples/rotate)
add_subdirectory(samples/rotate_params)
add_subdirectory(samples/scissor)
add_subdirectory(samples/sft_255)
add_subdirectory(samples/slt)
add_subdirectory(samples/stencil)
add_subdirectory(samples/stroke)
add_subdirectory(samples/tiger)
add_subdirectory(samples/tiled)
add_subdirectory(samples/ui)
add_subdirectory(samples/unit_test)
add_subdirectory(samples/unit_test1)
add_subdirectory(samples/vector)
add_subdirectory(samples/vector_upload)
add_subdirectory(samples/yuv_input)